force-app/main/default/objects/Workflow__c/fields/Subsidiary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Indicator__c</fullName>
    <label>Subsidiary Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subsidiary__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10001</fullName>
            </value>
            <value>
                <fullName>11201</fullName>
            </value>
            <value>
                <fullName>1201</fullName>
            </value>
            <value>
                <fullName>15201</fullName>
            </value>
            <value>
                <fullName>15601</fullName>
            </value>
            <value>
                <fullName>17001</fullName>
            </value>
            <value>
                <fullName>19101</fullName>
            </value>
            <value>
                <fullName>19102</fullName>
            </value>
            <value>
                <fullName>20301</fullName>
            </value>
            <value>
                <fullName>20801</fullName>
            </value>
            <value>
                <fullName>20802</fullName>
            </value>
            <value>
                <fullName>23301</fullName>
            </value>
            <value>
                <fullName>24601</fullName>
            </value>
            <value>
                <fullName>24602</fullName>
            </value>
            <value>
                <fullName>25000</fullName>
            </value>
            <value>
                <fullName>25001</fullName>
            </value>
            <value>
                <fullName>25002</fullName>
            </value>
            <value>
                <fullName>25003</fullName>
            </value>
            <value>
                <fullName>27601</fullName>
            </value>
            <value>
                <fullName>27604</fullName>
            </value>
            <value>
                <fullName>30001</fullName>
            </value>
            <value>
                <fullName>34801</fullName>
            </value>
            <value>
                <fullName>35601</fullName>
            </value>
            <value>
                <fullName>37201</fullName>
            </value>
            <value>
                <fullName>38001</fullName>
            </value>
            <value>
                <fullName>39801</fullName>
            </value>
            <value>
                <fullName>4001</fullName>
            </value>
            <value>
                <fullName>42801</fullName>
            </value>
            <value>
                <fullName>44001</fullName>
            </value>
            <value>
                <fullName>44201</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>