force-app/main/default/objects/Workflow__c/listViews/Mexico_Workflows.listView-meta.xml
<ListView>
    <fullName>Mexico_Workflows</fullName>
    <columns>NAME</columns>
    <columns>Subsidiary__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>Mexico Workflows</label>
</ListView>